split styles up

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -32,7 +32,7 @@
                 <% }) %>
             </ul>
             <div class="add-habit">
-                <a href="/habits/add" class="add-btn">Add New Habit</a>
+                <a href="/habits/add" class="btn">Add New Habit</a>
             </div>
         <% } else { %>
             <p>You haven't added any habits yet. <a href="/habits/add">Add one now!</a></p>
