--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,7 +18,7 @@
         </div>
         <div class="footer-section">
             <h3>Contact Us</h3>
-            <p>Email: support@dailyhabittracker.com</p>
+            <p><a href="/feedback">Feedback</a></p>
         </div>
     </div>
     <div class="footer-bottom">
