update feedback form style and submit message

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #3498db;
-    --secondary-color: #2980b9;
+    --primary-color: #2c3e50;
+    --secondary-color: #20638f;
     --background-color: #f4f4f4;
     --text-color: #333;
   }
