--- a/views/add-habit.ejs
+++ b/views/add-habit.ejs
@@ -7,11 +7,11 @@
     <div class="main-content">
         <h2>Add New Habit</h2>
         <form action="/habits/add" method="POST" class="add-habit-form">
-            <div class="add-habit-form">
+            <div class="form-group">
                 <label for="name">Habit Name:</label>
                 <input type="text" id="name" name="name" required>
             </div>
-            <div class="add-habit-form">
+            <div class="form-group">
                 <label for="description">Description:</label>
                 <textarea id="description" name="description" rows="3"></textarea>
             </div>
