--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,7 @@
                                     </span>
                                 </h4>
                                 <p><%= habit.description %></p>
-                                <span class="frequency"><%= habit.frequency %></span>
+                                <!-- <span class="frequency"><%= habit.frequency %></span> -->
                             </div>
                             <div class="habit-actions">
                                 <% if (!habit.isCompletedForCurrentPeriod()) { %>
