--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,8 +1,8 @@
 <div class="sidebar">
     <nav>
         <ul>
-            <li><a href="/habits/add">Add Habit</a></li>
-            <li><a href="/stats">Stats</a></li>
+            <li><a href="/habits/add"><i class="fas fa-plus"></i> Add Habit</a></li>
+            <li><a href="/stats"><i class="fas fa-chart-bar"></i> Stats</a></li>
         </ul>
     </nav>
 </div>
