--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -1,7 +1,10 @@
 <%- include('partials/header') %>
 
 <div class="dashboard-container">
+    <% if (!isMobile) { %>
     <%- include('partials/sidebar') %>
+    <% } %>
+    
     <div class="main-content">
         <h2>Feedback</h2>
         <form action="/feedback" method="POST" class="feedback-form" id="feedback-form">
