--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', { user: user }) %>
+<%- include('partials/header') %>
 
 <div class="container">
     <div class="content">
