--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header') %>
 
 <div class="dashboard-container">
+    <% if (!isMobile) { %>
     <%- include('partials/sidebar') %>
+    <% } %>
     <div class="main-content">
         <h2>Your Stats</h2>
         
