--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -20,6 +20,9 @@
             <h3>Contact Us</h3>
             <p><a href="/feedback">Feedback</a></p>
         </div>
+        <div class="footer-section">
+            <a href='https://ko-fi.com/Q5Q51073LB' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi6.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+        </div>
     </div>
     <div class="footer-bottom">
         <p>&copy; 2025 - Daily Habit Tracker. All rights reserved.</p>
