--- a/views/add-habit.ejs
+++ b/views/add-habit.ejs
@@ -7,14 +7,23 @@
     <% } %>
     <div class="main-content">
         <h2>Add New Habit</h2>
+
+        <% if (errors && errors.length > 0) { %>
+            <div class="error-messages">
+                <% errors.forEach(function(error) { %>
+                    <p class="error"><%= error.msg %></p>
+                <% }); %>
+            </div>
+        <% } %>
+
         <form action="/habits/add" method="POST" class="add-habit-form">
             <div class="form-group">
                 <label for="name">Habit Name:</label>
-                <input type="text" id="name" name="name" required>
+                <input type="text" id="name" name="name" required value="<%= formData ? formData.name : '' %>">
             </div>
             <div class="form-group">
                 <label for="description">Description:</label>
-                <textarea id="description" name="description" rows="3"></textarea>
+                <textarea id="description" name="description" rows="3"><%= formData ? formData.description : '' %></textarea>
             </div>
             <!-- <div class="form-group">
                 <label for="frequency">Frequency:</label>
